# jay

./: .gitignore  LICENSE  README.md  configure.ac  default.nix  shell.nix
src/: Makefile.am  coeff.hpp  common.hpp  jay.cpp  matrix.hpp  polynomial.hpp
